--- a/src/Web/ClientApp-React/package.json
+++ b/src/Web/ClientApp-React/package.json
@@ -2,74 +2,31 @@
   "name": "cleanarchitecture.web",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
-    "bootstrap": "^5.2.3",
-    "http-proxy-middleware": "^2.0.7",
-    "jquery": "^3.6.4",
-    "merge": "^2.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-bootstrap": "^0.26.2",
-    "react-router-dom": "^6.30.3",
-    "react-scripts": "^5.0.1",
-    "reactstrap": "^9.1.9",
-    "rimraf": "^5.0.0",
-    "web-vitals": "^3.3.1",
-    "workbox-background-sync": "^6.5.4",
-    "workbox-broadcast-update": "^6.5.4",
-    "workbox-cacheable-response": "^6.5.4",
-    "workbox-core": "^6.5.4",
-    "workbox-expiration": "^6.5.4",
-    "workbox-google-analytics": "^6.5.4",
-    "workbox-navigation-preload": "^6.5.4",
-    "workbox-precaching": "^6.5.4",
-    "workbox-range-requests": "^6.5.4",
-    "workbox-routing": "^6.5.4",
-    "workbox-strategies": "^6.5.4",
-    "workbox-streams": "^6.5.4"
+    "bootstrap": "^5.3.3",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router-bootstrap": "^0.26.3",
+    "react-router-dom": "^7.6.1",
+    "reactstrap": "^9.2.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.69",
-    "@types/react-dom": "^18.2.22",
-    "ajv": "^8.12.0",
-    "cross-env": "^7.0.3",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.0",
+    "@vitejs/plugin-react": "^4.5.0",
     "eslint": "^9.26.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-flowtype": "^8.0.3",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.2",
-    "nan": "^2.17.0",
-    "typescript": "^4.9.5"
-  },
-  "overrides": {
-    "autoprefixer": "10.4.5",
-    "nth-check": "2.1.1",
-    "webpack": "5.81.0"
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.1.0",
+    "typescript": "~5.8.3",
+    "vite": "^6.3.5"
   },
   "scripts": {
-    "prestart": "node aspnetcore-https && node aspnetcore-react",
-    "start": "rimraf ./build && react-scripts start",
-    "build": "react-scripts build",
-    "test": "cross-env CI=true react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "prestart": "node aspnetcore-https.cjs",
+    "start": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "lint": "eslint ./src/"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
