--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,9 @@ jobs:
       with:
         node-version: '24.x'
         cache: 'npm'
-        cache-dependency-path: src/Web/ClientApp/package-lock.json
+        cache-dependency-path: |
+          src/Web/ClientApp/package-lock.json
+          src/Web/ClientApp-React/package-lock.json
     #endif
 
     - name: Install .NET
@@ -51,6 +53,12 @@ jobs:
 
     - name: Build solution
       run: dotnet build --no-restore --configuration Release
+
+    #if (!UseApiOnly)
+    - name: Build React client app
+      run: npm ci && npm run build
+      working-directory: ./src/Web/ClientApp-React
+    #endif
       
     - name: Test solution
       run: dotnet test --no-build --configuration Release --filter "FullyQualifiedName!~AcceptanceTests"
